--- a/blog1.html
+++ b/blog1.html
@@ -86,6 +86,7 @@
                 <p class="pb-6">And I truly believe that we can help you get answers of your questions too. For you we
                     are always here and I really hope that we will be able to bestow a little bit of our positivity on
                     you. May god bless us all !</p>
+                <p class="pb-6"><a href="blogs.html">Main Page</a></p>
             </div>
         </main>
     </div>
