--- a/blog1.html
+++ b/blog1.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <img src="https://source.unsplash.com/1600x100/?universe">
     
     <div class="max-w-screen-xl mx-auto">
 
