--- a/blog2.html
+++ b/blog2.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+      <img src="https://source.unsplash.com/1600x100/?universe">
   
     <div class="max-w-screen-xl mx-auto">
 
@@ -96,6 +97,7 @@
                     see birth chart and how planets are influencing person's life. At last I want to say that astrology
                     is nothing
                     but reality.Some people dont show interest but fact is that "यह सत्य है".</p>
+                <p class="text-2xl text-gray-800 font-semibold mb-4 mt-4"><a href="index.html">Main Page</a></p>
             </div>
         </main>
     </div>
