--- a/index.html
+++ b/index.html
@@ -52,7 +52,29 @@
                             </div>
                         </div>
                     </div>
-                </div>                
+                </div> 
+                <div class="p-4 md:w-1/3">
+                    <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
+                        <img class="lg:h-48 md:h-36 w-full object-cover object-center"
+                            src="https://source.unsplash.com/720x400/?planets" alt="blog">
+                        <div class="p-6">
+                            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Bad Planetary Combinations in
+                                your Birthchart ?</h1>
+                            <p class="leading-relaxed mb-3">Hello guys, I know a lot of people think that if you have
+                                bad combinations in your chart then no matter what you do, .... </p>
+                            <div class="flex items-center flex-wrap">
+                                <a href="blog3.html"
+                                    class="text-orange-500 inline-flex items-center md:mb-2 lg:mb-0">More
+                                    <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+                                        fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                        <path d="M5 12h14"></path>
+                                        <path d="M12 5l7 7-7 7"></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>               
             </div>
         </div>
     </section>
