--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
             <img src="./images/lg.ico">
             <p class="text-sm text-gray-600 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">©
-                2020 AstroDrishti —
+                <a href="intro.html">2020 AstroDrishti —</a>
                 <a href="https://www.instagram.com/codebot1601/" class="text-gray-500 ml-1" target="_blank"
                     rel="noopener noreferrer">@AstroDrishti-IG</a>
             </p>
