--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <footer class="text-gray-500 bg-gray-900 body-font">
         <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
-            <img src="./images/lg.ico">
+            <a href="services.html"><img src="./images/lg.ico"></a>
             <p class="text-sm text-gray-600 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">©
                 <a href="intro.html">2020 AstroDrishti —</a>
                 <a href="https://www.instagram.com/codebot1601/" class="text-gray-500 ml-1" target="_blank"
