--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </svg>
                 </a>
 
-                <a class="ml-3 text-gray-600">
+                <a href="inapppurchase.html" class="ml-3 text-gray-600">
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                         stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                         <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
