--- a/inapppurchase.html
+++ b/inapppurchase.html
@@ -20,7 +20,7 @@
       </h1>
       <p class="mb-8 leading-relaxed">Details for the current kundli will be saved in our Databse for PDF analysis which can take upto 1 day. Kundli PDF will be provided On the email through which you have logged in, in the app. Note down Payment ID for any help in future. </p>
       <div class="flex justify-center">
-        <a href='https://imjo.in/tgDK8B'><button class="inline-flex text-white bg-orange-500 border-0 py-2 px-6 focus:outline-none hover:bg-orange-600 rounded text-lg">Pay Now</button></a>        
+        <a href='https://rzp.io/l/Hlfv82B'><button class="inline-flex text-white bg-orange-500 border-0 py-2 px-6 focus:outline-none hover:bg-orange-600 rounded text-lg">Pay Now</button></a>        
       </div>
     </div>
   </div>
