--- a/index.html
+++ b/index.html
@@ -74,7 +74,28 @@
                             </div>
                         </div>
                     </div>
-                </div>               
+                </div>  
+                <div class="p-4 md:w-1/3">
+                    <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
+                        <img class="lg:h-48 md:h-36 w-full object-cover object-center"
+                            src="https://source.unsplash.com/720x400/?god" alt="blog">
+                        <div class="p-6">
+                            <h1 class="title-font text-lg font-medium text-gray-900 mb-3"> Why can't we see God?</h1>
+                            <p class="leading-relaxed mb-3">In this modern era we believe in science, technology, etc. But whenever we are not able
+                                to complete a work, or I can say we want the luck in our favour we just... </p>
+                            <div class="flex items-center flex-wrap">
+                                <a href="blog4.html"
+                                    class="text-orange-500 inline-flex items-center md:mb-2 lg:mb-0">More
+                                    <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+                                        fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                        <path d="M5 12h14"></path>
+                                        <path d="M12 5l7 7-7 7"></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>             
             </div>
         </div>
     </section>
