--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
  <img src="https://source.unsplash.com/1600x200/?time">    
     <section class="text-gray-700 body-font">
         <div class="container px-5 py-5 mx-auto">
-            <div class="flex flex-wrap -m-41">
+            <div class="flex flex-wrap -m-41">                
                 <div class="p-4 md:w-1/3">
                     <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
                         <img class="lg:h-48 md:h-36 w-full object-cover object-center"
-                            src="https://source.unsplash.com/720x400/?time" alt="blog">
+                            src="https://source.unsplash.com/720x400/?aliens?ufo?relegion?altered" alt="blog">
                         <div class="p-6">
-                            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">How are we here?</h1>
-                            <p class="leading-relaxed mb-3">Honestly I never really believed in astrology. Why ? Its's simple. I always thought that
-                                the astologers were making things up and scaring other people for their own selfish reasons.</p>
-                            <div class="flex items-center flex-wrap ">
-                                <a href="blog1.html" class="text-orange-500 inline-flex items-center md:mb-2 lg:mb-0">More
+                            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Raëlism" Relegion or Myth ?</h1>
+                            <p class="leading-relaxed mb-3">Religion is a social-cultural system of designated behaviors and practices, morals, worldviews, texts, sanctified places, prophecies, ethics,.... </p>
+                            <div class="flex items-center flex-wrap">
+                                <a href="Raelism-relegion-or-myth.html"
+                                    class="text-orange-500 inline-flex items-center md:mb-2 lg:mb-0">More
                                     <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
                                         fill="none" stroke-linecap="round" stroke-linejoin="round">
                                         <path d="M5 12h14"></path>
@@ -95,7 +95,27 @@
                             </div>
                         </div>
                     </div>
-                </div>             
+                </div> 
+                <div class="p-4 md:w-1/3">
+                    <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
+                        <img class="lg:h-48 md:h-36 w-full object-cover object-center"
+                            src="https://source.unsplash.com/720x400/?time" alt="blog">
+                        <div class="p-6">
+                            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">How are we here?</h1>
+                            <p class="leading-relaxed mb-3">Honestly I never really believed in astrology. Why ? Its's simple. I always thought that
+                                the astologers were making things up and scaring other people for their own selfish reasons.</p>
+                            <div class="flex items-center flex-wrap ">
+                                <a href="blog1.html" class="text-orange-500 inline-flex items-center md:mb-2 lg:mb-0">More
+                                    <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+                                        fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                        <path d="M5 12h14"></path>
+                                        <path d="M12 5l7 7-7 7"></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>            
             </div>
         </div>
     </section>
